--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,7 @@
 
     <div class="form_group">
      <label for="user_image">Image</label><br>
-     <%= f.file_field :image, accept: "image/*" %>
+     <%= f.file_field :profile_image, accept: "image/*" %>
     </div>
 
     <div class="form_group">
